GPS-170: Implementar endpoint GET con ordenación
